# license

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  data.rs  lib.rs  license.rs
