[package]
name = "license"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.3"
schnorrkel = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.12.0"
clap = "2.33.0"

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[lib]
name = "license"
path = "src/lib.rs"

[[bin]]
name = "license"
path = "src/cli.rs" # replace bin.rs with name of your file
